# rust-gov-data

./: .gitignore  CICD.md  Cargo.toml  DataGovUK_Datasets.csv  LICENSE  README.md  test-data.json
.github/workflows/: deploy.yml
gov-data/: Cargo.toml  DataGovUK_Datasets.csv  README.md  data.json
gov-data/src/: main.rs  tests.rs
src/: ckan.rs  config.rs  csv_writer.rs  error.rs  main.rs  s3_upload.rs  tests.rs
