[package]
name = "gov-data"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.32.0"
csv = "1.3"
openssl = { version = "0.10", features = ["vendored"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
regex = "1"
anyhow = "1.0.98"
thiserror = "1.0"
once_cell = "1.19"
